crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__find_root_with_candidates_not_found-2.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
assertion_line: 30
expression: pretty(ts_2)
---
compile_error!("cipherbox: none of not-a-dependency is a dependency of this crate");
