crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__find_root_with_candidates_not_found.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(ts_1)
---
compile_error!(
    "cipherbox: none of not-a-dependency, also-not-a-dependency is a dependency of this crate",
);
