crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_global_struct_with_testing_feature_on_portable_storage.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
#[derive(RedoubtZero, RedoubtCodec)]
struct TestableGlobalSecrets {
    pub secret_key: [u8; 32],
    #[cfg(test)]
    #[codec(default)]
    __sentinel: redoubt_zero::ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl redoubt_vault_core::CipherBoxDyns<1> for TestableGlobalSecrets {
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 1] {
        [&mut self.secret_key]
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 1] {
        [&mut self.secret_key]
    }
}
impl redoubt_vault_core::EncryptStruct<1> for TestableGlobalSecrets {
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<1>,
        tags: &mut redoubt_vault_core::Tags<1>,
    ) -> Result<redoubt_vault_core::Ciphertexts<1>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<1> for TestableGlobalSecrets {
    fn decrypt_from(
        &mut self,
        aead: &redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &redoubt_vault_core::Nonces<1>,
        tags: &redoubt_vault_core::Tags<1>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<1>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(feature = "test-utils")]
#[derive(Debug, Clone, Copy)]
pub enum TestableGlobalSecretsBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct TestableGlobalSecretsBox {
    inner: redoubt_vault_core::CipherBox<TestableGlobalSecrets, 1>,
    /// Atomic so that the check below can sit in a method taking
    /// `&self`, which is what a read is.
    #[cfg(feature = "test-utils")]
    failure_counter: core::sync::atomic::AtomicUsize,
}
impl TestableGlobalSecretsBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead::Aead::default()),
            #[cfg(feature = "test-utils")]
            failure_counter: core::sync::atomic::AtomicUsize::new(0),
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(
            &TestableGlobalSecrets,
        ) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(feature = "test-utils")]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(
            &mut TestableGlobalSecrets,
        ) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(feature = "test-utils")]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(feature = "test-utils")]
    pub fn set_failure_mode(&self, mode: TestableGlobalSecretsBoxFailureMode) {
        use core::sync::atomic::Ordering;
        match mode {
            TestableGlobalSecretsBoxFailureMode::None => {
                self.failure_counter.store(0, Ordering::Relaxed);
            }
            TestableGlobalSecretsBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter.store(n, Ordering::Relaxed);
            }
        }
    }
    #[inline(always)]
    pub fn leak_secret_key(
        &self,
    ) -> Result<
        redoubt_zero::ZeroizingGuard<[u8; 32]>,
        redoubt_vault_core::CipherBoxError,
    > {
        #[cfg(feature = "test-utils")]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<[u8; 32], 0, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn open_secret_key<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&[u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(feature = "test-utils")]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<[u8; 32], 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_secret_key_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut [u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(feature = "test-utils")]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner
            .open_field_mut::<[u8; 32], 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
}
impl Default for TestableGlobalSecretsBox {
    fn default() -> Self {
        Self::new()
    }
}
mod __testable_global_secrets_box_internal {
    use super::*;
    pub(super) struct SyncCell<T>(core::cell::UnsafeCell<T>);
    unsafe impl<T> Sync for SyncCell<T> {}
    impl<T> SyncCell<T> {
        pub(super) const fn new(value: T) -> Self {
            Self(core::cell::UnsafeCell::new(value))
        }
        pub(super) fn get(&self) -> *mut T {
            self.0.get()
        }
    }
    pub(super) const STATE_UNINIT: u8 = 0;
    pub(super) const STATE_IN_PROGRESS: u8 = 1;
    pub(super) const STATE_DONE: u8 = 2;
    pub(super) static STATIC_TESTABLE_GLOBAL_SECRETS_BOX: SyncCell<
        Option<TestableGlobalSecretsBox>,
    > = SyncCell::new(None);
    pub(super) static STATIC_TESTABLE_GLOBAL_SECRETS_BOX_INIT: core::sync::atomic::AtomicU8 = core::sync::atomic::AtomicU8::new(
        STATE_UNINIT,
    );
    pub(super) static STATIC_TESTABLE_GLOBAL_SECRETS_BOX_LOCK: core::sync::atomic::AtomicBool = core::sync::atomic::AtomicBool::new(
        false,
    );
    #[cold]
    #[inline(never)]
    pub(super) fn init_slow() {
        use core::sync::atomic::Ordering;
        match STATIC_TESTABLE_GLOBAL_SECRETS_BOX_INIT
            .compare_exchange(
                STATE_UNINIT,
                STATE_IN_PROGRESS,
                Ordering::Acquire,
                Ordering::Relaxed,
            )
        {
            Ok(_) => {
                unsafe {
                    let ptr = STATIC_TESTABLE_GLOBAL_SECRETS_BOX.get();
                    *ptr = Some(TestableGlobalSecretsBox::new());
                }
                core::sync::atomic::fence(Ordering::Release);
                STATIC_TESTABLE_GLOBAL_SECRETS_BOX_INIT
                    .store(STATE_DONE, Ordering::Release);
            }
            Err(_) => {
                while STATIC_TESTABLE_GLOBAL_SECRETS_BOX_INIT.load(Ordering::Acquire)
                    != STATE_DONE
                {
                    core::hint::spin_loop();
                }
            }
        }
    }
    pub(super) fn lock() {
        use core::sync::atomic::Ordering;
        while STATIC_TESTABLE_GLOBAL_SECRETS_BOX_LOCK.swap(true, Ordering::Acquire) {
            core::hint::spin_loop();
        }
    }
    pub(super) fn release() {
        use core::sync::atomic::Ordering;
        STATIC_TESTABLE_GLOBAL_SECRETS_BOX_LOCK.store(false, Ordering::Release);
    }
    pub(super) struct PanicGuard;
    impl Drop for PanicGuard {
        fn drop(&mut self) {
            release();
        }
    }
    pub(super) fn get_or_init() -> &'static mut TestableGlobalSecretsBox {
        use core::sync::atomic::Ordering;
        if STATIC_TESTABLE_GLOBAL_SECRETS_BOX_INIT.load(Ordering::Acquire) != STATE_DONE
        {
            init_slow();
        }
        unsafe {
            (*STATIC_TESTABLE_GLOBAL_SECRETS_BOX.get())
                .as_mut()
                .expect(
                    concat!(
                        "Infallible: ",
                        stringify!(STATIC_TESTABLE_GLOBAL_SECRETS_BOX),
                        " has already been initialized",
                    ),
                )
        }
    }
}
pub struct TESTABLE_GLOBAL_SECRETS_BOX;
impl TESTABLE_GLOBAL_SECRETS_BOX {
    pub fn open<F, R>(
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(
            &TestableGlobalSecrets,
        ) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.open(f)
    }
    pub fn open_mut<F, R>(
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(
            &mut TestableGlobalSecrets,
        ) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.open_mut(f)
    }
    #[cfg(feature = "test-utils")]
    pub fn set_failure_mode(mode: TestableGlobalSecretsBoxFailureMode) {
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.set_failure_mode(mode);
    }
    pub fn leak_secret_key() -> Result<
        redoubt_zero::ZeroizingGuard<[u8; 32]>,
        redoubt_vault_core::CipherBoxError,
    > {
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.leak_secret_key()
    }
    pub fn open_secret_key<F, R>(
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&[u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.open_secret_key(f)
    }
    pub fn open_secret_key_mut<F, R>(
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut [u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.open_secret_key_mut(f)
    }
}
impl redoubt_zero::StaticFastZeroizable for TESTABLE_GLOBAL_SECRETS_BOX {
    fn fast_zeroize() {
        use redoubt_zero::FastZeroizable;
        __testable_global_secrets_box_internal::lock();
        let _guard = __testable_global_secrets_box_internal::PanicGuard;
        let instance = __testable_global_secrets_box_internal::get_or_init();
        instance.fast_zeroize();
    }
}
